--- a/math/0_2016/exercises/1/exercise_1_solution.tex
+++ b/math/0_2016/exercises/1/exercise_1_solution.tex
@@ -21,7 +21,19 @@
 		\begin{enumerate}
 			\item
 			\begin{equation*}
-				(\lnot x \lor y) \lor ((y \land x) \lor (y \land z))				
+				(\lnot x \lor y) \lor ((y \land x) \lor (y \land z))
+			\end{equation*}
+			\begin{equation*}
+				\lnot x \lor y \lor (y \land z) \lor (y \land x)
+			\end{equation*}
+			\begin{equation*}
+				\lnot x \lor y \lor (y \land x)
+			\end{equation*}
+			\begin{equation*}
+				\lnot x \lor y
+			\end{equation*}
+			\begin{equation*}
+				x \Rightarrow y
 			\end{equation*}
 			
 			\item
