--- a/math/0_2016/questions/questions_0.tex
+++ b/math/0_2016/questions/questions_0.tex
@@ -159,7 +159,7 @@
 			
 			\item
 			\begin{equation*}
-				\underbrace{A \lor (\underbrace{\underbrace{\lnot B}_{\text{Negation}} \land C}_{\text{Konjunktion}})}_{\text{Disjunktion}}
+				\underbrace{A \lor (\underbrace{\underbrace{\lnot B}_{\text{Negation}} \lor C}_{\text{Disjunktion}})}_{\text{Disjunktion}}
 			\end{equation*}
 			\begin{tabular}{|l|l|l|c|c|c|}
 				\firsthline
