fixed the third example in the second homework

--- a/math/0_2016/exercises/1/exercise_1_solution.tex
+++ b/math/0_2016/exercises/1/exercise_1_solution.tex
@@ -105,25 +105,15 @@
 			\begin{equation*}
 				(A \otimes B) \land B
 			\end{equation*}
+			\newline
+			Alternative:
+			\begin{equation*}
+				\lnot A \land B
+			\end{equation*}
 			
 			\item
 			\begin{equation*}
-				(\lnot A \lor \lnot B \lor C) \land (\lnot A \lor B \lor C) \land (A \lor B \lor \lnot C)
-			\end{equation*}
-			\begin{equation*}
-				(C \lor (\lnot A \lor \lnot B)) \land (C \lor (\lnot A \lor B)) \land (A \lor B \lor \lnot C)
-			\end{equation*}
-			\begin{equation*}
-				(C \lor ((\lnot A \lor \lnot B) \land (\lnot A \lor B)) \land (A \lor B \lor \lnot C)
-			\end{equation*}
-			\begin{equation*}
-				(C \lor (\lnot A \lor (\lnot B \land B)) \land (A \lor B \lor \lnot C)
-			\end{equation*}
-			\begin{equation*}
-				(C \lor (\lnot A \lor f) \land (A \lor B \lor \lnot C)
-			\end{equation*}
-			\begin{equation*}
-				(C \lor \lnot A) \land (A \lor B \lor \lnot C)
+				(\lnot A \land \lnot B \land C) \lor (\land A \land B \land C) \lor (A \land B \land \lnot C)
 			\end{equation*}
 		\end{enumerate}
 		
