finished the first point of the third programming homework homework added the fourth LGI homework updated the third part of the LGI control questions

--- a/LGI/0_2016/questions/2/questions_2.tex
+++ b/LGI/0_2016/questions/2/questions_2.tex
@@ -29,7 +29,7 @@
 		Darüber hinaus ist es wichtig x auf einen fixen Wert zu setzen, da ansonsten die Aussage so modifiziert werden kann, damit sie nach Belieben wahr oder falsch ist.
 		
 		\item
-		???
+		Der Beweis einer Existenzaussage ist schwieriger, da die Ermittlung des Wertes für den die Aussage wahr ist oft wesentlich schwieriger ist als das Heranziehen eines beliebigen, aber fixen Wertes.
 		
 		\item
 		Eine Problemspezifikation ist eine mathematische Beschreibung der Abstraktion eines Problems.
@@ -61,13 +61,13 @@
 			\lnot A \equiv f \rightarrow A \equiv w
 		\end{equation*}
 		\newline
-		???
+		Widerspruchsbeweise sind komplizierter, da es einige Kreativität erfordert, um den Widerspruch in der negierten Aussage zu finden.
 		
 		\item
-		???
+		Snorlax help me.
 		
 		\item
-		???
+		Das Ergebnis eines Produktquantors bei einer falschen Aussage stellt den Neutralitätswert für die Multiplikation dar. Das bedeutet, dass eine falsche Aussage keinen Einfluss auf das Ergebnis nimmt.
 	\end{enumerate}
 
 	\section{Übungen}
@@ -493,7 +493,7 @@
 					\hline
 						4 & -4 \\
 					\hline
-						\textbf{5} & \textbf{0} \\
+						\textbf{5} & 0 \\
 					\hline
 						6 & 4 \\
 					\hline
@@ -523,7 +523,7 @@
 					\hline
 						4 & 1 \\
 					\hline
-						\textbf{5} & \textbf{0} \\
+						5 & \textbf{0} \\
 					\hline
 						6 & 1 \\
 					\hline
@@ -540,11 +540,11 @@
 					\hline
 						2 & 9 \\
 					\hline
-						3 & 4 \\
+						\textbf{3} & 4 \\
 					\hline
 						4 & 1 \\
 					\hline
-						\textbf{5} & \textbf{0} \\
+						5 & 0 \\
 					\hline
 						6 & 1 \\
 					\hline
