updated the third LGI homework finished the fourth LGI homework

--- a/LGI/0_2016/exercises/2/exercise_2_solution.tex
+++ b/LGI/0_2016/exercises/2/exercise_2_solution.tex
@@ -55,7 +55,7 @@
 			\item
 			Es gibt mindestens ein Element für x und beliebig viele Elemente für y, für die gilt, dass deren Addition den Wert 0 ergibt.
 			\newline
-			Diese Aussage ist ebenfalls wahr, da analog zu den vorherigen Beispielen x durch -y substituiert wird und das x in der Aussage genau den Wert jedes y annehmen kann.
+			Diese Aussage ist wahr, da x durch -y substituiert werden kann und das x in der Aussage genau den Wert jedes y annehmen kann, da y zuerst gebunden wird.
 			
 			\begin{equation*}
 				(-y) + y = 0
@@ -156,7 +156,7 @@
 		\begin{enumerate}
 			\item
 			\begin{equation*}
-				\forall x \exists y \text{ hatLuftZug}(x) \land \text{ sindNachbarn}(x, y) \Rightarrow \text{hatLoch}(y)
+				\forall x \exists y \text{ hatLuftZug}(x) \land \text{ hatLoch}(y) \Rightarrow  \text{sindNachbarn}(x, y)
 			\end{equation*}
 			
 			\item
