--- a/LGI/0_2016/exercises/3/exercise_3.tex
+++ b/LGI/0_2016/exercises/3/exercise_3.tex
@@ -23,7 +23,7 @@
 			\item
 			Es gibt mindestens einen Wert x, der jeden Wert y ohne Rest teilt.
 			\newline
-			Diese Aussage ist wahr, da jede ganze Zahl durch 1 und durch sich selbst geteilt wird und x diese Werte annehmen kann.
+			Diese Aussage ist wahr, da jede ganze Zahl durch 1 und durch sich selbst geteilt wird und x diese Werte annehmen kann. Diese Aussage ist ebenfalls für die ganzen Zahlen war, da 1 alle ganzen Zahlen teilt.
 			
 			\begin{equation*}
 				x | y \leftarrow x = 1
@@ -31,32 +31,32 @@
 			\begin{equation*}
 				1 | y \equiv w
 			\end{equation*}
-			\begin{equation*}
-				x | y \leftarrow x = y
-			\end{equation*}
-			\begin{equation*}
-				y | y \equiv w
-			\end{equation*}
 			
 			\item
 			Für alle x gibt es mindestens ein y, welches von allen x ohne Rest geteilt wird.
 			\newline
-			Diese Aussage ist falsch, da y vor x gebunden wird und somit für jeden beliebigen Wert von x den selben Wert annehmen muss und nur die Zahl 0 von allen Zahlen ohne Rest geteilt wird. Allerdings kann y aufgrund der Beschränkung des Universums auf die ganzen Zahlen nicht den Wert 0 annehmen.
+			Diese Aussage ist für die natürlichen Zahlen war, da x vor y gebunden wird und y somit immer den Wert von y annehmen kann. Für die ganzen Zahlen ist die Aussage allerdings falsch, da x den Wert 0 annehmen kann und eine Division durch 0 nicht möglich ist.
 			
 			\item
-			Es gibt mindestens ein x gibt es eine beliebige Menge von y, die x ohne Rest teilen.
+			Es gibt mindestens ein x, dass von allen y geteilt wird.
 			\newline
-			
+			In den natürlichen Zahlen ist diese Aussage falsch, da keine Zahl durch alle beliebigen Zahlen geteilt werden kann. In den ganzen Zahlen ist diese Aussage allerdings richtig, da 0 von allen Zahlen ohne Rest geteilt wird.
 			
 			\item
 			Für alle Werte x gibt es mindestens ein Element y, dass von den x ohne Rest geteilt wird.
 			\newline
-			Diese Aussage ist wahr, da y den Wert von 1 annehmen kann und jede Zahl durch 1 ohne Rest geteilt wird.
+			Diese Aussage ist wahr, da y den Wert von 1 annehmen kann und jede Zahl durch 1 ohne Rest geteilt wird. Darüber hinaus wird x vor y gebunden und y kann den Wert von x annehmen.
 			\begin{equation*}
 				y | x \leftarrow y = 1
 			\end{equation*}
 			\begin{equation*}
 				1 | x \equiv w
+			\end{equation*}
+			\begin{equation*}
+				y | x \leftarrow y = x
+			\end{equation*}
+			\begin{equation*}
+				x | x \equiv w
 			\end{equation*}
 		\end{enumerate}
 		
@@ -92,6 +92,8 @@
 			\item Die PK "prim" erhält einen Wahrheitswert als Parameter.
 			\item Die PK "=" erhält einen Wahrheitswert (Ergebnis der PK "prim") als Parameter.
 			\item Diese Aussage ist nicht gültig, wenn der Wert von x und y vertauscht wird. Der Absolutbetrag der Differenz muss 2 ergeben.
+			\newline			
+			\textbf{Alternative:} Es kann an den Term angehängt werden (mittels Konjunktion), dass x größer als y ist.
 		\end{enumerate}
 		
 		\item
@@ -113,8 +115,28 @@
 		\begin{equation*}
 			\exists p \text{ } p \geq 2 \land \forall n \text{ } \lnot (n \geq 2) \lor \lnot (\text{prim}(p) \land p \leq n)
 		\end{equation*}
+		\textbf{Lösung A}
 		\begin{equation*}
 			\exists p \text{ } p \geq 2 \land \forall n \text{ } \lnot (n \geq 2) \lor \lnot (\text{prim}(p)) \lor \lnot (p \leq n)
 		\end{equation*}
+		\textbf{Lösung B}
+		\begin{equation*}
+			\exists p \text{ } p \geq 2 \land \forall n \text{ } n \geq 2 \Rightarrow \lnot (\text{prim}(p) \land (p \geq n))
+		\end{equation*}
+		\begin{equation*}
+			\exists_{p \geq 2} \forall_{n \geq 2} \lnot(\text{prim}(p) \land p \leq n)
+		\end{equation*}
+		
+		\item
+		Es gilt zu beweisen, dass es unendlich oft vorkommt, dass $p + 2$ keine Primzahl ist, wenn $p$ eine Primzahl ist. Beispiele dafür sind 7 und 9, 11 und 13 sowie 23 und 25. Zu beachten ist, dass all die erwähnten Zahlen ungerade sind.
+		\newline
+		Um den Widerspruch zu bilden, nimmt man an, dass dies nicht so ist und ab einer bestimmten Primzahl $q$ alle Zahlen, die durch $q + 2$ gebildet werden, ebenfalls Primzahlen sind. Daraus ergibt sich, dass $(q + 2) + 2$ ebenfalls eine Primzahl ist. Daraus folgt, dass jede ungerade Zahl ab $q$ eine Primzahl ist.
+		\newline
+		Nun kann man das Produkt $Q$ folgendermaßen bilden: $Q = q \cdot (q + 2)$. Da sowohl $q$ als auch $q + 2$ ungerade sind, ist auch das Ergebnis deren Multiplikation ungerade und $Q$ ist größer als $q$: $Q > q$.
+		\newline
+		Folglich müsste auch $Q$ eine Primzahl sein, da sie ja ungerade und größer als q ist.
+		Allerdings steht das im Widerspruch zu der Tatsache, dass $Q$ das Ergebnis einer Multiplikation ist und somit durch $q$ und $q + 2$ ohne Rest geteilt werden kann.
+		\newline
+		Somit ist das Gegenteil des Widerspruches bewiesen.
 	\end{enumerate}
 \end{document}
