finished the third programming homework added additional files

--- a/LGI/0_2016/exercises/3/exercise_3.tex
+++ b/LGI/0_2016/exercises/3/exercise_3.tex
@@ -23,7 +23,7 @@
 			\item
 			Es gibt mindestens einen Wert x, der jeden Wert y ohne Rest teilt.
 			\newline
-			Diese Aussage ist wahr, da jede ganze Zahl durch 1 und durch sich selbst geteilt wird und x diese Werte annehmen kann. Diese Aussage ist ebenfalls für die ganzen Zahlen war, da 1 alle ganzen Zahlen teilt.
+			Diese Aussage ist wahr, da jede ganze Zahl durch 1 und durch sich selbst geteilt wird und x diese Werte annehmen kann. Diese Aussage ist ebenfalls für die ganzen Zahlen wahr, da 1 alle ganzen Zahlen teilt.
 			
 			\begin{equation*}
 				x | y \leftarrow x = 1
@@ -35,7 +35,7 @@
 			\item
 			Für alle x gibt es mindestens ein y, welches von allen x ohne Rest geteilt wird.
 			\newline
-			Diese Aussage ist für die natürlichen Zahlen war, da x vor y gebunden wird und y somit immer den Wert von y annehmen kann. Für die ganzen Zahlen ist die Aussage allerdings falsch, da x den Wert 0 annehmen kann und eine Division durch 0 nicht möglich ist.
+			Diese Aussage ist für die natürlichen Zahlen wahr, da x vor y gebunden wird und y somit immer den Wert von y annehmen kann. Für die ganzen Zahlen ist die Aussage allerdings falsch, da x den Wert 0 annehmen kann und eine Division durch 0 nicht möglich ist.
 			
 			\item
 			Es gibt mindestens ein x, dass von allen y geteilt wird.
